Mon Aug 14 15:50:00 BST 2000 Olly Betts

	* MultiDatabase::MultiDatabase(const DatabaseBuilderParams & params)
	  now always throws OmInvalidOperationError.  The other constructor
	  is a much less awkward way to construct a multidatabase and
	  removing it greatly simplifies DatabaseBuilderParams.

Mon Aug 14 15:13:00 BST 2000 Olly Betts

	* Removed default stuff from OmSettings and added methods to read and
	  write integer and real values.

Mon Aug 14 12:36:01 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added directory and build stuff for new backend - quartz.  Not
	  compiled by default (but then, there's no code there yet either...)

Fri Aug 11 19:59:32 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* IRDatabase destructor no longer tries to end session, since
	  derived classes will have been destroyed: added (protected)
	  internal_end_session() instead, which derived class destructors
	  should call.

	* Fix failure to initialise IRDatabase::session_in_progress and
	  IRDatabase::transaction_in_progress

Fri Aug 11 19:25:10 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add to internaltest a test that nested exceptions work correctly.

Fri Aug 11 19:09:30 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* API change:  Replaced OmWritableDatabase::end_transaction() by
	  OmWritableDatabase::commit_transaction() and
	  OmWritableDatabase::cancel_transaction().

	* IRDatabase no longer inherits from IndexerDestination: obselete
	  class.

	* Modified IRDatabase to support new writable database API model,
	  giving it public methods to match.  These public methods ensure
	  that the sessions and transactions are appropriately started
	  and ended, and then call private virtual do_* methods, which
	  are overridden to perform the actions.

	* Modified backend Database classes to have stub methods so the
	  system works with the new writable database model.
